--- a/exercise1.html
+++ b/exercise1.html
@@ -13,7 +13,7 @@
     <li> Web Development </li>
     <li> Chess </li>
     <li> Reading </li>
-    <li> Learning </li>
+   
  </ul>
 
  	<p> <h2> Favourite Quotes </h2> </p>
@@ -24,6 +24,7 @@
     <blockquote>
        <p class="emphasis">     ...and another  </p>
     </blockquote>
+    <p> this is the second addition </p>
 </body>
 </html>
 
